<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="5dp">
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="name" />
    <TextView
        android:id="@+id/tv_colon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/colon_space"
        app:layout_constraintStart_toEndOf="@id/tv_name" />
    <TextView
        android:id="@+id/tv_mail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@id/tv_colon"
        tools:text="email" />
    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/cd_iv_delete" />
    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toStartOf="@id/iv_delete"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/cd_iv_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>