<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp">
    <TextView
        android:id="@+id/tv_title_dialog_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_edit"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_title_dialog_edit"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_input_name_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:labelFor="@id/et_input_name"
                android:text="@string/lbl_name" />
            <EditText
                android:id="@+id/et_input_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:autofillHints="name"
                android:inputType="text"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_input_mail_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:labelFor="@id/et_input_mail"
                android:text="@string/lbl_mail" />
            <EditText
                android:id="@+id/et_input_mail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:autofillHints="e-mail"
                android:inputType="textEmailAddress"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_input_wrapper"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        android:text="@string/lbl_update"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ll_input_wrapper"
        android:text="@string/lbl_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp" />

</androidx.constraintlayout.widget.ConstraintLayout>